Fixed next-auth edge issues with drizzle adapter

--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ NEXTAUTH_URL="http://localhost:3000"
 
 DATABASE_URL="postgres://postgres.zanjiqdeaebhqkgymike:Yuri-fest10@aws-0-sa-east-1.pooler.supabase.com:5432/postgres"
 
-GITHUB_CLIENT_ID_DEV="ce21b4b21d0d38117aa5"
-GITHUB_CLIENT_SECRET_DEV="b84a6d5b5be527935890eff67e9d7d1adf7e9310"
+GITHUB_CLIENT_ID="ce21b4b21d0d38117aa5"
+GITHUB_CLIENT_SECRET="b84a6d5b5be527935890eff67e9d7d1adf7e9310"
